Fix missing whitespace for mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -56,6 +56,7 @@ blockquote {
 
 .profile {
   margin-left: 1rem;
+  margin-bottom: 1rem;
   width: 100%;
 
   .address {
